[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypathutil"
version = "0.0.17"
requires-python = ">=3.12"
authors = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
maintainers = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
description = "command line utilities to help you work with paths"
readme = "README.md"
license = "MIT"
keywords=[
    "path",
    "command-line",
    "shell",
    "reduce",
    "append",
    "remove",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pylogconf",
    "pytconf",
]

[project.urls]
"Homepage" = "https://github.com/veltzer/pypathutil"
"Bug Tracker" = "https://github.com/veltzer/pypathutil/issues"
"Documentation" = "https://veltzer.github.io/pypathutil"
"Download" = "https://pypi.org/project/pypathutil/"
"Repository" = "https://github.com/veltzer/pypathutil"

[project.scripts]
pypathutil = "pypathutil.main:main"

[tool.ruff]
line-length = 130

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pypathutil"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pypathutil/",
    "README.md",
    "LICENSE",
    "pyproject.toml"
]
exclude = [
    ".gitignore",
    ".github/",
    "tests/",
    "docs/",
    "config/",
    "*.md",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.hatch.envs.default]
installer = "uv"
